studentsSystem/web/styles/css/style.css
body{
    background-color: #E6E6DC;
}
nav{
    height: 40px;
    width: 100%;
    height: 100%;
}
nav ul {
    height: 30px;
    font-family: "Lucida Sans Unicode", "Lucida Grande", Verdana, Arial, Helvetica, sans-serif;
    font-weight: bold;

}
nav ul li {
    float: left;
    list-style: none;
    margin-left: 10px;
    margin-top: 5px;
    border: 1px solid black;
    border-radius: 10px;
    padding: 5px;
    -webkit-box-shadow: 5px 2px 2px 0px rgba(0,0,0,0.25);
    -moz-box-shadow: 5px 2px 2px 0px rgba(0,0,0,0.25);
    box-shadow: 5px 2px 2px 0px rgba(0,0,0,0.25);

}
nav ul li:hover{
    background-color: #00628B;
    color: white;
}
nav ul:nth-child(2) {
    position: fixed;
    top: 0;
    right: 5%;
    list-style: none;
    margin-left: 5px;
}

.clear{
    clear: both;
}

.searchFields{
    text-align: center;
}
.edit{
    background-image: url("../img/pencil_pen_write_edit_delete-128.png");
    background-repeat:   no-repeat;
    background-position: center center;
}
.delete{
    background-image: url("../img/trash-128.png");
    background-repeat:   no-repeat;
    background-position: center center;
}

.edit:hover,.delete:hover{
    cursor: pointer;
}
.firstPage,.previousPage,.nextPage,.lastPage{
    background-color: #b9b97e;
    color: #540968;
}

#mainContainer{
    border-radius: 20px;
    padding: 20px;
    background-color: #81A594;
    margin: 20px;
}

table{
    min-width: 20%;
}

#addNewCourse, #addNewSpeciality, #addNewSubject, #addNewStudent, #addNewAssessment{
    margin-left: 35%;
}
#addNewUser{
    margin-left: 25%;
}
#addNewCourse{
    margin-left: 25%;
}

#courseTable table{
    width: 30%;
}
#assessmentTable table{
    width: 40%;
}
#studentsTable table{
    width: 40%;
}
#subjectsTable table{
    width: 40%;
}
footer{
    text-align: center;
}

